# blender-eigen-template

./: .gitignore  CMakeLists.txt  README.md  package_addon.sh  reload_addons.py
cppTemplate/: __init__.py  operators.py  settings.py  ui.py
cppTemplate/utils/: NumpyMesh.py  SharedLib.py  __init__.py
src/: example.cpp  igl_example.cpp
